<resources>
    <string name="app_name">Memories</string>
    <string name="send_verification">your account is not verified yet please verfiy your account first</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myMemories">My memories</string>
    <string name="add">Add</string>
    <string name="grad">Graduation Moments Moments</string>
    <string name="memoryLogoTransitionName">logoimage</string>
    <string name="memoryImageViewTrasitionName">memoryImageTransitionName</string>

    <string name="facebook_app_id">292290695785337</string>
    <string name="fb_login_protocol_scheme">fb292290695785337</string>
    <string name="camera">camera</string>
    <string name="changeimg">Change profile Picture</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="profilePictureTransitionName">profilePictureTransitionName</string>
    <string name="AccountTransitionName">accountTransition</string>
    <string name="profileNameTransitionName">nameTransitionName</string>
    <string name="account">Account</string>
    <string name="arabic">Arabic</string>
    <string name="wlcome_message">Welcome</string>
    <string name="LatestMemory">Last Memory</string>
    <string name="Add">Add</string>
    <string name="AllMemories">All Memories</string>
    <string name="Settings">Settings</string>
    <string name="PersonalInfo">Personal Info</string>
    <string name="Language">Langauge</string>
    <string name="Mode">Mode</string>
    <string name="Notification">Notification</string>

    <string name="Favourite">Favourite</string>
    <string name="MyFavouriteImage">My favourite image</string>
    <string name="search">Search</string>
    <string name="username">user name</string>
    <string name="oldpassword">old password</string>
    <string name="newpassword">new password</string>
    <string name="Uploadinprogresspleasewait">Upload in progress please wait</string>
    <string name="Passwordchanged">Password changed</string>
    <string name="imagesaved">Image Saved</string>
    <string name="usernamechanged">user name changed</string>
    <string name="pleaseacceptpermissiontochoosefromgallery">please accept permission to choose from gallery</string>
    <string name="wrongpassword">Wrong password</string>
    <string name="SetLanguage">Set Language : </string>
    <string name="SetMode">Set Mode: </string>
    <string name="OFF">Off</string>
    <string name="ON">On</string>
    <string name="Night">Night</string>
    <string name="Day">Day</string>
    <string name="emailaddress">email address</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="OR">OR</string>
    <string name="signup">Sign Up</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="age">Age</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Memorytittle">Memory tittle</string>
    <string name="Memorydescription">Memory description</string>
    <string name="Adding">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="locationGettingError">unable to get your location make sure the GPS is enable and the permission is granted</string>
    <string name="EnterTittle">Enter Tittle</string>
    <string name="Tittleshouldnbelessthan6">Tittle shouldn be less than 6</string>
    <string name="choosesomeImages">choose some ؛photos</string>
    <string name="choosemainphoto">choose main photo to your collection</string>
    <string name="Uploadingprogress">Uploading In progress</string>
    <string name="MemoryCreatedSuccessfuly">Memory Created Successfuly</string>
    <string name="enableyourGPS">enable your GPS</string>
    <string name="PleaseAcceptLocationPermision">Please accept this permission to get the location</string>
    <string name="acceptDeafaultPermission">Please accept this permission to continue</string>
    <string name="memorycannotcontain15">memory cannot contain more than 15 image</string>
    <string name="inProgress">In Progress</string>
    <string name="pleasewaitamoment">please wait a moment</string>
    <string name="processimages">process images</string>
    <string name="gettingyourlocation">Getting your location</string>
    <string name="Reset">Reset password</string>
    <string name="pleasecheckyourMail">please check your Mail</string>
    <string name="Wehaveblockedallrequests">" We have blocked all requests from this device due to unusual activity, try later"</string>
    <string name="enteredemaildoesntexist">entered email doesn\'t exist</string>
    <string name="wrongEmailFormat">wrong email format</string>
    <string name="pleaseEnterAValidEmail">please enter a valid email</string>
    <string name="pleaseEnterAValidPass" >please enter a valid password</string>
    <string name="ConnectionCheck">check internet connection and try later</string>
    <string name="worngEmailOrPass">your email or password are incorrect</string>
    <string name="connectionOffline">No Internet Connection</string>
    <string name="connectionOnline">Back Online</string>
    <string name="gettingPhotoPath">getting photo path</string>
    <string name="addingDialogtxt">learn how to add new memory</string>
    <string name="later">Later</string>
    <string name="Location">Location</string>
    <string name="provideLocation">provide your location..?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pressAgain">press again to exite</string>
</resources>