<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FragmentBackGroung"
    tools:context=".fragments.FavoriteFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_favorite_xml_constraintlayout4_scene">


        <EditText
            android:id="@+id/favoriteFragmentET_search"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/oval_shape"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/searchBarTextColor"
            android:textColorHint="@color/searchBarTextColor"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/favoriteFragmentLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favoriteFragmentET_search">

            <TextView
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12sp"
                android:layout_marginTop="12sp"
                android:fontFamily="@font/aclonica"
                android:text="@string/Favourite"
                android:textColor="@color/mainTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12sp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/MyFavouriteImage"
                android:textColor="@color/sub2TextColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteFragmentRecyclerViewx"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:background="@color/FragmentBackGroung"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/favoriteFragmentLinear"
            tools:listitem="@layout/item_favorite_images" />
    </androidx.constraintlayout.motion.widget.MotionLayout>


</FrameLayout>